


########### install files ###############

install( FILES
level_1
level_2
level_3
level_4
level_5
level_6
level_7
level_8
level_9
level_10
level_11
level_12
level_13
level_14
level_15
level_16
level_17
level_18
level_19
level_20
level_21
level_22
level_23
level_24
level_25
level_26
level_27
level_28
level_29
level_30
level_31
level_32
level_33
level_34
level_35
level_36
level_37
level_38
level_39
level_40
level_41
level_42
level_43
level_44
level_45
level_46
level_47
level_48
level_49
level_50
level_51
level_52
level_53
level_54
level_55
level_56
level_57
level_58
level_59
level_60
level_61
level_62
level_63
level_64
level_65
level_66
level_67
level_68
level_69
level_70
level_71
level_72
level_73
level_74
level_75
level_76
level_77
level_78
level_79
level_80
level_81
level_82
level_84 DESTINATION ${DATA_INSTALL_DIR}/katomic/levels)

