
levels_DATA = level_1 level_10 level_11 level_12 level_13 level_14 \
	level_15 level_16 level_17 level_18 level_19 level_2 level_20 \
	level_21 level_22 level_23 level_24 level_25 level_26 level_27 \
	level_28 level_29 level_3 level_30 level_31 level_32 level_33 \
	level_34 level_35 level_36 level_37 level_38 level_39 level_4 \
	level_40 level_41 level_42 level_43 level_44 level_45 level_46 \
	level_47 level_48 level_49 level_5 level_50 level_51 level_52 \
	level_53 level_54 level_55 level_56 level_57 level_58 level_59 \
	level_6 level_60 level_61 level_62 level_63 level_64 level_65 \
	level_66 level_67 level_7 level_8 level_9

levelsdir = $(kde_datadir)/katomic/levels
